--- a/ConvenienceSystemApp/ConvenienceSystemApp.Droid/Properties/AndroidManifest.xml
+++ b/ConvenienceSystemApp/ConvenienceSystemApp.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.auxua.convenience2">
 	<uses-sdk android:minSdkVersion="15" />
-	<application></application>
+	<application android:label="Convenience App" android:icon="@drawable/Icon"></application>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
