Readme/License Project for Admin CLient minor changes

--- a/ConvenienceSystemApp/ConvenienceSystemApp.iOS/Info.plist
+++ b/ConvenienceSystemApp/ConvenienceSystemApp.iOS/Info.plist
@@ -44,6 +44,6 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen.storyboard</string>
 	<key>CFBundleShortVersionString</key>
-	<string></string>
+	<string>1</string>
 </dict>
 </plist>
