--- a/ConvenienceSystemServer/ConvenienceSystemServer.csproj
+++ b/ConvenienceSystemServer/ConvenienceSystemServer.csproj
@@ -49,27 +49,20 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>
-    </StartupObject>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Nancy, Version=0.21.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Nancy.0.21.1\lib\net40\Nancy.dll</HintPath>
-    </Reference>
-    <Reference Include="Nancy.Hosting.Self, Version=0.21.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Nancy.Hosting.Self.0.21.1\lib\net40\Nancy.Hosting.Self.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Xml" />
+    <Reference Include="Nancy">
+      <HintPath>..\packages\Nancy.0.21.1\lib\net40\Nancy.dll</HintPath>
+    </Reference>
+    <Reference Include="Nancy.Hosting.Self">
+      <HintPath>..\packages\Nancy.Hosting.Self.0.21.1\lib\net40\Nancy.Hosting.Self.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
@@ -86,11 +79,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConvenienceSystemBackendServer\ConvenienceSystemBackendServer.csproj">
-      <Project>{f68c49d6-f562-4f82-a6f2-054936e3d399}</Project>
+      <Project>{F68C49D6-F562-4F82-A6F2-054936E3D399}</Project>
       <Name>ConvenienceSystemBackendServer</Name>
     </ProjectReference>
     <ProjectReference Include="..\ConvenienceSystemDataModel\ConvenienceSystemDataModel.csproj">
-      <Project>{68d6f03c-0cfc-4476-ab47-eade56aace9b}</Project>
+      <Project>{68D6F03C-0CFC-4476-AB47-EADE56AACE9B}</Project>
       <Name>ConvenienceSystemDataModel</Name>
     </ProjectReference>
   </ItemGroup>
