Grouped products list containing popular items for this user Small Changes on DataModel Basic Icons

--- a/ConvenienceSystemApp/ConvenienceSystemApp.WinPhone/ConvenienceSystemApp.WinPhone.csproj
+++ b/ConvenienceSystemApp/ConvenienceSystemApp.WinPhone/ConvenienceSystemApp.WinPhone.csproj
@@ -122,6 +122,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Icon%402x.png" />
+    <Content Include="Icon-76%402x.png" />
+    <Content Include="iTunesArtwork%402x.png" />
     <Content Include="README_FIRST.txt" />
     <Content Include="SplashScreenImage.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
