App: Refreshing and Bug Fixes WebClient: Fixed Issue #3 (Conversion Issues)

--- a/ConvenienceSystemApp/ConvenienceSystemApp.iOS/Info.plist
+++ b/ConvenienceSystemApp/ConvenienceSystemApp.iOS/Info.plist
@@ -4,7 +4,6 @@
 <dict>
 	<key>UIDeviceFamily</key>
 	<array>
-		<integer>1</integer>
 		<integer>2</integer>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
@@ -20,13 +19,13 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string></string>
+	<string>9.0</string>
 	<key>CFBundleDisplayName</key>
 	<string>ConvenienceSystemApp</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.auxua.convenience</string>
 	<key>CFBundleVersion</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>CFBundleIconFiles</key>
 	<array>
 		<string>Icon-60@2x.png</string>
@@ -37,8 +36,12 @@
 		<string>Icon-Small.png</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen.storyboard</string>
+	<string>LaunchScreen</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2</string>
+	<string>3</string>
+	<key>UIMainStoryboardFile</key>
+	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
