Fixing Bug in converting negtive double values with en-us browser alnguage

--- a/WebAdminClient/Web.config
+++ b/WebAdminClient/Web.config
@@ -26,7 +26,8 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
-    <sessionState timeout="10080" />
+    <!--<sessionState timeout="10080" />-->
+    <sessionState mode="InProc" cookieless="false" timeout="10080" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
