* Added Firewall Management * Added Revert in Webadmin * Added Acounting for user view * Added custom number of recent Accounting activites to show * UI Improvements * Fixing problem of Android compilation config * Debugging constant in PHP WebAdmin to enable/disable debugging outputs * Minor additions and improvements
Note: Only updated PHP Webadmin - ASP.NET will follow

--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,9 @@ UpgradeLog*.htm
 # Microsoft Fakes
 FakesAssemblies/
 
+# Dreamweaver notes
+dwsync.xml
+
 # Settings of the project
 Settings.cs
 Config.cs
