--- a/ConvenienceSystemApp/ConvenienceSystemApp.iOS/Info.plist
+++ b/ConvenienceSystemApp/ConvenienceSystemApp.iOS/Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.auxua.convenience</string>
 	<key>CFBundleVersion</key>
-	<string>1.5.1</string>
+	<string>1.5.2</string>
 	<key>CFBundleIconFiles</key>
 	<array>
 		<string>Icon-60@2x.png</string>
@@ -41,7 +41,9 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>LaunchScreen</string>
+	<key>CFBundleName</key>
+	<string>ConvenienceSystemApp</string>
 	<key>CFBundleShortVersionString</key>
-	<string>7</string>
+	<string>8</string>
 </dict>
 </plist>
